// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser - Inline Directives > should correctly parse inline directives inside definitions 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 27,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 27,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 28,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 28,
            "Text": "
",
            "Trailing": [],
          },
        ],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [
        {
          "end": 60,
          "kind": 18,
          "name": "InUse",
          "start": 33,
          "value": "Collection:RMColl",
        },
        {
          "end": 91,
          "kind": 18,
          "name": "Delete",
          "start": 65,
          "value": "Part:HeaderPart",
        },
      ],
      "end": 114,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 27,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "Test Directives",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 12,
            "Text": "Test",
            "Trailing": [
              {
                "FullStart": 16,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 16,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          {
            "FullStart": 17,
            "Kind": 600,
            "Leading": [],
            "Length": 10,
            "Start": 17,
            "Text": "Directives",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 103,
            "isIncomplete": false,
            "kind": 3,
            "start": 100,
            "text": "SET",
            "tokens": [
              {
                "FullStart": 100,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 100,
                "Text": "SET",
                "Trailing": [],
              },
            ],
          },
          "args": [
            {
              "end": 110,
              "isIncomplete": false,
              "kind": 3,
              "start": 105,
              "text": "MyVar",
              "tokens": [
                {
                  "FullStart": 105,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 5,
                  "Start": 105,
                  "Text": "MyVar",
                  "Trailing": [],
                },
              ],
            },
            {
              "end": 114,
              "kind": 4,
              "start": 112,
              "token": {
                "FullStart": 112,
                "Kind": 603,
                "Leading": [],
                "Length": 2,
                "Start": 112,
                "Text": "10",
                "Trailing": [
                  {
                    "FullStart": 114,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 114,
                    "Text": "
",
                    "Trailing": [],
                  },
                ],
              },
              "value": 10,
            },
          ],
          "end": 114,
          "kind": 12,
          "label": {
            "end": 98,
            "isIncomplete": false,
            "kind": 3,
            "start": 96,
            "text": "01",
            "tokens": [
              {
                "FullStart": 92,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 92,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 92,
                    "Text": "    ",
                    "Trailing": [],
                  },
                ],
                "Length": 2,
                "Start": 96,
                "Text": "01",
                "Trailing": [],
              },
            ],
          },
          "start": 96,
          "targetVariable": {
            "end": 110,
            "isIncomplete": false,
            "kind": 3,
            "start": 105,
            "text": "MyVar",
            "tokens": [
              {
                "FullStart": 105,
                "Kind": 600,
                "Leading": [],
                "Length": 5,
                "Start": 105,
                "Text": "MyVar",
                "Trailing": [],
              },
            ],
          },
          "valueExpression": {
            "end": 114,
            "kind": 4,
            "start": 112,
            "token": {
              "FullStart": 112,
              "Kind": 603,
              "Leading": [],
              "Length": 2,
              "Start": 112,
              "Text": "10",
              "Trailing": [
                {
                  "FullStart": 114,
                  "Kind": 6,
                  "Leading": [],
                  "Length": 1,
                  "Start": 114,
                  "Text": "
",
                  "Trailing": [],
                },
              ],
            },
            "value": 10,
          },
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 115,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    29,
    61,
    92,
    115,
  ],
  "start": 0,
  "text": "
[Function: Test Directives]
    <InUse: Collection: RMColl>
    <Delete: Part: HeaderPart>
    01: SET: MyVar: 10
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 12,
      "Text": "Test",
      "Trailing": [
        {
          "FullStart": 16,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 16,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 17,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 17,
      "Text": "Directives",
      "Trailing": [],
    },
    {
      "FullStart": 27,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 27,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 28,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 28,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 29,
      "Kind": 501,
      "Leading": [
        {
          "FullStart": 29,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 29,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 1,
      "Start": 33,
      "Text": "<",
      "Trailing": [],
    },
    {
      "FullStart": 34,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 34,
      "Text": "InUse",
      "Trailing": [],
    },
    {
      "FullStart": 39,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 39,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 40,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 40,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 41,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 41,
      "Text": "Collection",
      "Trailing": [],
    },
    {
      "FullStart": 51,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 51,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 52,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 52,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 53,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 53,
      "Text": "RMColl",
      "Trailing": [],
    },
    {
      "FullStart": 59,
      "Kind": 502,
      "Leading": [],
      "Length": 1,
      "Start": 59,
      "Text": ">",
      "Trailing": [
        {
          "FullStart": 60,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 60,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 61,
      "Kind": 501,
      "Leading": [
        {
          "FullStart": 61,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 61,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 1,
      "Start": 65,
      "Text": "<",
      "Trailing": [],
    },
    {
      "FullStart": 66,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 66,
      "Text": "Delete",
      "Trailing": [],
    },
    {
      "FullStart": 72,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 72,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 73,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 73,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 74,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 74,
      "Text": "Part",
      "Trailing": [],
    },
    {
      "FullStart": 78,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 78,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 79,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 79,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 80,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 80,
      "Text": "HeaderPart",
      "Trailing": [],
    },
    {
      "FullStart": 90,
      "Kind": 502,
      "Leading": [],
      "Length": 1,
      "Start": 90,
      "Text": ">",
      "Trailing": [
        {
          "FullStart": 91,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 91,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 92,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 92,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 92,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 2,
      "Start": 96,
      "Text": "01",
      "Trailing": [],
    },
    {
      "FullStart": 98,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 98,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 99,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 99,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 100,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 100,
      "Text": "SET",
      "Trailing": [],
    },
    {
      "FullStart": 103,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 103,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 104,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 104,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 105,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 105,
      "Text": "MyVar",
      "Trailing": [],
    },
    {
      "FullStart": 110,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 110,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 111,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 111,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 112,
      "Kind": 603,
      "Leading": [],
      "Length": 2,
      "Start": 112,
      "Text": "10",
      "Trailing": [
        {
          "FullStart": 114,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 114,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 115,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 115,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;

exports[`Parser - Inline Directives > should not confuse relational operators for directives 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 28,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 28,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 29,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 29,
            "Text": "
",
            "Trailing": [],
          },
        ],
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
          },
        ],
      },
      "complexObjects": [],
      "directives": [],
      "end": 100,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 28,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "Relational Check",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 10,
            "Start": 12,
            "Text": "Relational",
            "Trailing": [
              {
                "FullStart": 22,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 22,
                "Text": " ",
                "Trailing": [],
              },
            ],
          },
          {
            "FullStart": 23,
            "Kind": 600,
            "Leading": [],
            "Length": 5,
            "Start": 23,
            "Text": "Check",
            "Trailing": [],
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 40,
            "isIncomplete": false,
            "kind": 3,
            "start": 38,
            "text": "IF",
            "tokens": [
              {
                "FullStart": 38,
                "Kind": 600,
                "Leading": [],
                "Length": 2,
                "Start": 38,
                "Text": "IF",
                "Trailing": [],
              },
            ],
          },
          "args": [
            {
              "end": 54,
              "kind": 16,
              "left": {
                "arguments": [],
                "end": 49,
                "functionName": {
                  "end": 49,
                  "isIncomplete": false,
                  "kind": 3,
                  "start": 44,
                  "text": "Value",
                  "tokens": [
                    {
                      "FullStart": 44,
                      "Kind": 600,
                      "Leading": [],
                      "Length": 5,
                      "Start": 44,
                      "Text": "Value",
                      "Trailing": [
                        {
                          "FullStart": 49,
                          "Kind": 601,
                          "Leading": [],
                          "Length": 1,
                          "Start": 49,
                          "Text": " ",
                          "Trailing": [],
                        },
                      ],
                    },
                  ],
                },
                "kind": 7,
                "start": 42,
              },
              "operator": {
                "FullStart": 50,
                "Kind": 501,
                "Leading": [],
                "Length": 1,
                "Start": 50,
                "Text": "<",
                "Trailing": [
                  {
                    "FullStart": 51,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 51,
                    "Text": " ",
                    "Trailing": [],
                  },
                ],
              },
              "right": {
                "end": 54,
                "kind": 4,
                "start": 52,
                "token": {
                  "FullStart": 52,
                  "Kind": 603,
                  "Leading": [],
                  "Length": 2,
                  "Start": 52,
                  "Text": "10",
                  "Trailing": [
                    {
                      "FullStart": 54,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 54,
                      "Text": "
",
                      "Trailing": [],
                    },
                  ],
                },
                "value": 10,
              },
              "start": 42,
            },
          ],
          "condition": {
            "end": 54,
            "kind": 16,
            "left": {
              "arguments": [],
              "end": 49,
              "functionName": {
                "end": 49,
                "isIncomplete": false,
                "kind": 3,
                "start": 44,
                "text": "Value",
                "tokens": [
                  {
                    "FullStart": 44,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 5,
                    "Start": 44,
                    "Text": "Value",
                    "Trailing": [
                      {
                        "FullStart": 49,
                        "Kind": 601,
                        "Leading": [],
                        "Length": 1,
                        "Start": 49,
                        "Text": " ",
                        "Trailing": [],
                      },
                    ],
                  },
                ],
              },
              "kind": 7,
              "start": 42,
            },
            "operator": {
              "FullStart": 50,
              "Kind": 501,
              "Leading": [],
              "Length": 1,
              "Start": 50,
              "Text": "<",
              "Trailing": [
                {
                  "FullStart": 51,
                  "Kind": 601,
                  "Leading": [],
                  "Length": 1,
                  "Start": 51,
                  "Text": " ",
                  "Trailing": [],
                },
              ],
            },
            "right": {
              "end": 54,
              "kind": 4,
              "start": 52,
              "token": {
                "FullStart": 52,
                "Kind": 603,
                "Leading": [],
                "Length": 2,
                "Start": 52,
                "Text": "10",
                "Trailing": [
                  {
                    "FullStart": 54,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 54,
                    "Text": "
",
                    "Trailing": [],
                  },
                ],
              },
              "value": 10,
            },
            "start": 42,
          },
          "elseStatements": [],
          "end": 100,
          "endStatement": {
            "action": {
              "end": 100,
              "isIncomplete": false,
              "kind": 3,
              "start": 94,
              "text": "END IF",
              "tokens": [
                {
                  "FullStart": 94,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 3,
                  "Start": 94,
                  "Text": "END",
                  "Trailing": [
                    {
                      "FullStart": 97,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 97,
                      "Text": " ",
                      "Trailing": [],
                    },
                  ],
                },
                {
                  "FullStart": 98,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 2,
                  "Start": 98,
                  "Text": "IF",
                  "Trailing": [
                    {
                      "FullStart": 100,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 100,
                      "Text": "
",
                      "Trailing": [],
                    },
                  ],
                },
              ],
            },
            "args": [],
            "end": 100,
            "kind": 12,
            "label": {
              "end": 92,
              "isIncomplete": false,
              "kind": 3,
              "start": 90,
              "text": "03",
              "tokens": [
                {
                  "FullStart": 86,
                  "Kind": 603,
                  "Leading": [
                    {
                      "FullStart": 86,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 4,
                      "Start": 86,
                      "Text": "    ",
                      "Trailing": [],
                    },
                  ],
                  "Length": 2,
                  "Start": 90,
                  "Text": "03",
                  "Trailing": [],
                },
              ],
            },
            "start": 90,
          },
          "kind": 12,
          "label": {
            "end": 36,
            "isIncomplete": false,
            "kind": 3,
            "start": 34,
            "text": "01",
            "tokens": [
              {
                "FullStart": 30,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 30,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 30,
                    "Text": "    ",
                    "Trailing": [],
                  },
                ],
                "Length": 2,
                "Start": 34,
                "Text": "01",
                "Trailing": [],
              },
            ],
          },
          "start": 34,
          "statements": [
            {
              "action": {
                "end": 70,
                "isIncomplete": false,
                "kind": 3,
                "start": 67,
                "text": "SET",
                "tokens": [
                  {
                    "FullStart": 67,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 3,
                    "Start": 67,
                    "Text": "SET",
                    "Trailing": [],
                  },
                ],
              },
              "args": [
                {
                  "end": 78,
                  "isIncomplete": false,
                  "kind": 3,
                  "start": 72,
                  "text": "Status",
                  "tokens": [
                    {
                      "FullStart": 72,
                      "Kind": 600,
                      "Leading": [],
                      "Length": 6,
                      "Start": 72,
                      "Text": "Status",
                      "Trailing": [],
                    },
                  ],
                },
                {
                  "end": 85,
                  "kind": 4,
                  "start": 80,
                  "token": {
                    "FullStart": 80,
                    "Kind": 604,
                    "Leading": [],
                    "Length": 5,
                    "Start": 80,
                    "Text": ""Low"",
                    "Trailing": [
                      {
                        "FullStart": 85,
                        "Kind": 6,
                        "Leading": [],
                        "Length": 1,
                        "Start": 85,
                        "Text": "
",
                        "Trailing": [],
                      },
                    ],
                  },
                  "value": ""Low"",
                },
              ],
              "end": 85,
              "kind": 12,
              "label": {
                "end": 61,
                "isIncomplete": false,
                "kind": 3,
                "start": 59,
                "text": "02",
                "tokens": [
                  {
                    "FullStart": 55,
                    "Kind": 603,
                    "Leading": [
                      {
                        "FullStart": 55,
                        "Kind": 601,
                        "Leading": [],
                        "Length": 4,
                        "Start": 55,
                        "Text": "    ",
                        "Trailing": [],
                      },
                    ],
                    "Length": 2,
                    "Start": 59,
                    "Text": "02",
                    "Trailing": [],
                  },
                ],
              },
              "start": 59,
              "targetVariable": {
                "end": 78,
                "isIncomplete": false,
                "kind": 3,
                "start": 72,
                "text": "Status",
                "tokens": [
                  {
                    "FullStart": 72,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 6,
                    "Start": 72,
                    "Text": "Status",
                    "Trailing": [],
                  },
                ],
              },
              "valueExpression": {
                "end": 85,
                "kind": 4,
                "start": 80,
                "token": {
                  "FullStart": 80,
                  "Kind": 604,
                  "Leading": [],
                  "Length": 5,
                  "Start": 80,
                  "Text": ""Low"",
                  "Trailing": [
                    {
                      "FullStart": 85,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 85,
                      "Text": "
",
                      "Trailing": [],
                    },
                  ],
                },
                "value": ""Low"",
              },
            },
          ],
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
          },
        ],
      },
    },
  ],
  "end": 101,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    30,
    55,
    86,
    101,
  ],
  "start": 0,
  "text": "
[Function: Relational Check]
    01: IF: $$Value < 10
    02:     SET: Status: "Low"
    03: END IF
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 12,
      "Text": "Relational",
      "Trailing": [
        {
          "FullStart": 22,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 22,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 23,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 23,
      "Text": "Check",
      "Trailing": [],
    },
    {
      "FullStart": 28,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 28,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 29,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 29,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 30,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 30,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 2,
      "Start": 34,
      "Text": "01",
      "Trailing": [],
    },
    {
      "FullStart": 36,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 36,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 37,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 37,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 38,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 38,
      "Text": "IF",
      "Trailing": [],
    },
    {
      "FullStart": 40,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 40,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 41,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 41,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 42,
      "Kind": 204,
      "Leading": [],
      "Length": 2,
      "Start": 42,
      "Text": "$$",
      "Trailing": [],
    },
    {
      "FullStart": 44,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 44,
      "Text": "Value",
      "Trailing": [
        {
          "FullStart": 49,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 49,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 50,
      "Kind": 501,
      "Leading": [],
      "Length": 1,
      "Start": 50,
      "Text": "<",
      "Trailing": [
        {
          "FullStart": 51,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 51,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 52,
      "Kind": 603,
      "Leading": [],
      "Length": 2,
      "Start": 52,
      "Text": "10",
      "Trailing": [
        {
          "FullStart": 54,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 54,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 55,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 55,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 55,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 2,
      "Start": 59,
      "Text": "02",
      "Trailing": [],
    },
    {
      "FullStart": 61,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 61,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 62,
          "Kind": 601,
          "Leading": [],
          "Length": 5,
          "Start": 62,
          "Text": "     ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 67,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 67,
      "Text": "SET",
      "Trailing": [],
    },
    {
      "FullStart": 70,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 70,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 71,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 71,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 72,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 72,
      "Text": "Status",
      "Trailing": [],
    },
    {
      "FullStart": 78,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 78,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 79,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 79,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 80,
      "Kind": 604,
      "Leading": [],
      "Length": 5,
      "Start": 80,
      "Text": ""Low"",
      "Trailing": [
        {
          "FullStart": 85,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 85,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 86,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 86,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 86,
          "Text": "    ",
          "Trailing": [],
        },
      ],
      "Length": 2,
      "Start": 90,
      "Text": "03",
      "Trailing": [],
    },
    {
      "FullStart": 92,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 92,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 93,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 93,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 94,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 94,
      "Text": "END",
      "Trailing": [
        {
          "FullStart": 97,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 97,
          "Text": " ",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 98,
      "Kind": 600,
      "Leading": [],
      "Length": 2,
      "Start": 98,
      "Text": "IF",
      "Trailing": [
        {
          "FullStart": 100,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 100,
          "Text": "
",
          "Trailing": [],
        },
      ],
    },
    {
      "FullStart": 101,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 101,
      "Text": "",
      "Trailing": [],
    },
  ],
}
`;
